--- a/config/jcasc/jobs.yaml
+++ b/config/jcasc/jobs.yaml
@@ -1,17 +1,16 @@
 jobs:
   - script: >
-      pipelineJob('example') {
-        definition {
-          cpsScm {
-            scm {
-                git{
-                  remote {
-                    url('https://github.com/aokiji/jenkins-casc-poc-project.git')
-                  }
-                  branches('master')
-                  extensions { }
-                }
-              }
+      job('seed') {
+        scm {
+          git {
+            remote { url('https://github.com/aokiji/jenkins-casc-poc.git') }
+            branches('master')
+            extensions {}
+          }
+        }
+        steps {
+          jobDsl {
+            targets('config/jobs/**/*.groovy')
           }
         }
       }
