feat: optionally add agents

--- a/config/jcasc/nodes.yaml
+++ b/config/jcasc/nodes.yaml
@@ -11,3 +11,14 @@ jenkins:
               failIfWorkDirIsMissing: false
               internalDir: "remoting"
               workDirPath: "/tmp"
+    - permanent:
+        name: agent2
+        labelString: other
+        remoteFS: /home/jenkins
+        launcher:
+          jnlp:
+            workDirSettings:
+              disabled: true
+              failIfWorkDirIsMissing: false
+              internalDir: "remoting"
+              workDirPath: "/tmp"
