--- a/docker/docker-compose.with-agent2.yml
+++ b/docker/docker-compose.with-agent2.yml
@@ -1,7 +1,9 @@
 version: '3'
 services:
   agent2:
-    image: jenkins/inbound-agent
+    build:
+      dockerfile: agent.Dockerfile
+      context: docker
     entrypoint: bash /usr/local/bin/wait-for-jenkins.sh /usr/local/bin/jenkins-agent
     volumes:
       - "./docker/wait-for-jenkins.sh:/usr/local/bin/wait-for-jenkins.sh"
