--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,35 @@ services:
       nofile:
         soft: 122880
         hard: 122880
+  agent1:
+    build:
+      dockerfile: agent.Dockerfile
+      context: docker
+    entrypoint: bash /usr/local/bin/wait-for-jenkins.sh /usr/local/bin/jenkins-agent
+    volumes:
+      - "./docker/wait-for-jenkins.sh:/usr/local/bin/wait-for-jenkins.sh"
+      - "agent1-workdir:/home/jenkins/agent"
+    environment:
+      JENKINS_URL: 'http://jenkins:8080'
+      JENKINS_SECRET: "@/tmp/secret"
+      JENKINS_AGENT_NAME: agent1
+    depends_on:
+      - jenkins
+  agent2:
+    build:
+      dockerfile: agent.Dockerfile
+      context: docker
+    entrypoint: bash /usr/local/bin/wait-for-jenkins.sh /usr/local/bin/jenkins-agent
+    volumes:
+      - "./docker/wait-for-jenkins.sh:/usr/local/bin/wait-for-jenkins.sh"
+      - "agent2-workdir:/home/jenkins/agent"
+    environment:
+      JENKINS_URL: 'http://jenkins:8080'
+      JENKINS_SECRET: "@/tmp/secret"
+      JENKINS_AGENT_NAME: agent2
+    depends_on:
+      - jenkins
 volumes:
   jenkins_home:
+  agent1-workdir:
+  agent2-workdir:
